Fix blue tap-highlight flash on portfolio tiles on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -249,6 +249,7 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
 }
 
 button:active,
